tests/parser/tests/cases/should_fail/unclosed_set_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:9
1 |   k := set{ 1,
  |           ^ here
  = note: Encountered unclosed delimiter `{`, add a `}` after the inner expression
